# MVP-GA4GH-Policy-Compliance-RAG-Chatbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
data/lexicon/: policy_terms.json
data/policies/: ga4gh_daa_clauses.md  ga4gh_framework.md
data/test_letters/: fully_compliant_letter.txt  minimal_sloppy_letter.txt  sample_letter_with_gaps.txt
evaluation/: ground_truth.json  metrics.py
scripts/: run_evaluation.py  seed_knowledge_graph.py  seed_postgres.py
src/: config.py
src/analysis/: coherence_checker.py  gap_detector.py  prompts.py  remediation.py
src/api/: dependencies.py  main.py  routes.py
src/ingestion/: chunker.py  document_parser.py
src/models/: db_models.py  schemas.py
src/retrieval/: fusion.py  graph_search.py  keyword_extractor.py  lexical_search.py  semantic_search.py
src/ui/: streamlit_app.py
tests/: test_chunker.py  test_e2e.py  test_gap_detector.py  test_retrieval.py
